Updated vite config

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
-
+<github-corners
+  label="Check out the GitHub repository!"
+  repo="H0rn0chse/project-overview"
+  blank="true"
+>
+</github-corners>
 </html>
