Added import export template

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <div id="hidden"></div>
 </body>
 <github-corners
   label="Check out the GitHub repository!"
