Replaced github corner

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   <script type="module" src="/src/main.js"></script>
   <div id="hidden"></div>
 </body>
-<github-corners
+<github-corner
   label="Check out the GitHub repository!"
-  repo="H0rn0chse/team-bookmarks"
-  blank="true"
+  href="https://github.com/H0rn0chse/team-bookmarks"
 >
-</github-corners>
+</github-corner>
 </html>
