--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="hidden"></div>
 </body>
 <github-corner
-  label="Check out the GitHub repository!"
+  title="Check out the GitHub repository!"
   href="https://github.com/H0rn0chse/team-bookmarks"
 >
 </github-corner>
